# Progetto_Ranzato

./: CMakeLists.txt  RELAZIONE_POLIMORFISMO.md  main.cpp  mainwindowprova.cpp  test_eventi.json  untitled_it_IT.ts
file cpp/impegno/: impegno.h
file cpp/persona/: persona.h
fileCpp/Json/: jsonmanager.cpp  jsonmanager.hpp  test_io.cpp
fileCpp/QtUI/: ClickableLabel.h  DayWeekView.cpp  DayWeekView.h  EventDelegate.cpp  EventDelegate.h  EventModel.cpp  EventModel.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  NewEventiDialog.cpp  NewEventiDialog.h  clickablelabel.cpp  main.cpp  resources.xml
fileCpp/QtWidgets/: qtwidgetsglobal.h
fileCpp/auth/: DBConnectDialog.cpp  DBConnectDialog.h  UserAuthDialog.cpp  UserAuthDialog.h
fileCpp/dataora/: data.cpp  dataNascita.cpp  dataNascita.h  dataora.cpp  dataora.h  dataoracommentato.cpp
fileCpp/db/: db_connect_test.cpp  db_connector.cpp  db_connector.h
fileCpp/impegno/: impegno.cpp  impegno.h
fileCpp/persona/: persona.cpp  persona.h  personaDB.h
fileCpp/utils/: AuthUtils.cpp  AuthUtils.h  DButils.cpp  DButils.h  util_dateTime.cpp  util_dateTime.h
sql/: agendadb.db  db.sql
